Fix file paths to work both in dev and build mode

--- a/public/splash.html
+++ b/public/splash.html
@@ -9,9 +9,9 @@
 <body>
     <div class="card card-splash">
         <div class="content-splash">
-            <img class="logo-epoc-splash" src="../src/assets/img/epoc.svg" alt="logo ePoc">
+            <img class="logo-epoc-splash" src="img/epoc.svg" alt="logo ePoc">
             <div class="bottom-splash">
-                <img src="../src/assets/img/inria.svg" alt="logo Inria Learning Lab">
+                <img src="img/inria.svg" alt="logo Inria Learning Lab">
                 <p>V2.1.4</p>
             </div>
         </div>
