Set appInfo dynamically in splash screen

--- a/public/splash.html
+++ b/public/splash.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Splash Screen</title>
+    <title>ePoc Editor</title>
 </head>
 <body>
     <div class="card card-splash">
@@ -12,7 +12,10 @@
             <img class="logo-epoc-splash" src="img/epoc.svg" alt="logo ePoc">
             <div class="bottom-splash">
                 <img src="img/inria.svg" alt="logo Inria Learning Lab">
-                <p>V2.1.4</p>
+                <p>
+                    <span id="appVersion"></span>
+                    <span id="buildVersion"></span>
+                </p>
             </div>
         </div>
     </div> 
