Adding functionnal playwright test

--- a/public/splash.html
+++ b/public/splash.html
@@ -7,7 +7,7 @@
     <title>ePoc Editor</title>
 </head>
 <body>
-    <div class="card card-splash">
+    <div id="splash-screen" class="card card-splash">
         <div class="content-splash">
             <img class="logo-epoc-splash" src="img/epoc.svg" alt="logo ePoc">
             <div class="bottom-splash">
